force-app/main/default/objects/Content_BlogEntry__c/Content_BlogEntry__c.object-meta.xml
<CustomObject>
    <label>Content--BlogEntry</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{DD}-{0}</displayFormat>
        <label>Content--BlogEntry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Content--BlogEntries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>