force-app/main/default/objects/Content_BlogEntry__c/fields/Above_the_Fold__c.field-meta.xml
<CustomField>
    <fullName>Above_the_Fold__c</fullName>
    <description>&quot;above the fold&quot; appears on the main blog page so that readers can see the beginning of the post and click a link to the full post.</description>
    <inlineHelpText>&quot;above the fold&quot; appears on the main blog page so that readers can see the beginning of the post and click a link to the full post.</inlineHelpText>
    <label>Above the Fold</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>