force-app/main/default/objects/Content_BlogEntry__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <description>The author that will be shown to the customer</description>
    <inlineHelpText>The author that will be shown to the customer</inlineHelpText>
    <label>Author</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>