force-app/main/default/objects/Content_BlogEntry__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>Body for the blog entry</description>
    <inlineHelpText>Body for the blog entry</inlineHelpText>
    <label>Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>