force-app/main/default/objects/Content_BlogEntry__c/fields/BottomScript__c.field-meta.xml
<CustomField>
    <fullName>BottomScript__c</fullName>
    <label>BottomScript</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>