force-app/main/default/objects/Content_BlogEntry__c/fields/Deck__c.field-meta.xml
<CustomField>
    <fullName>Deck__c</fullName>
    <description>The deck is the blurb or subheadline displayed on the main blog and beside the title on the links component</description>
    <inlineHelpText>The deck is the blurb or subheadline displayed on the main blog and beside the title on the links component</inlineHelpText>
    <label>Deck</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>