force-app/main/default/objects/Content_BlogEntry__c/fields/Draft_Above_the_Fold__c.field-meta.xml
<CustomField>
    <fullName>Draft_Above_the_Fold__c</fullName>
    <label>Draft Above the Fold</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>