force-app/main/default/objects/Content_BlogEntry__c/fields/Draft_Body__c.field-meta.xml
<CustomField>
    <fullName>Draft_Body__c</fullName>
    <label>Draft Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>