force-app/main/default/objects/Content_BlogEntry__c/fields/Friendly_URL__c.field-meta.xml
<CustomField>
    <fullName>Friendly_URL__c</fullName>
    <defaultValue>text(YEAR(today()))&amp;&quot;/&quot;&amp;text(Month(today()))&amp;&quot;/&quot;&amp;text(day(today()))&amp;&quot;/&quot;</defaultValue>
    <description>URL of article title in friendly format</description>
    <inlineHelpText>this-is-a-friednly-URL-title (all lowercase, separated by hyphens, absolutely no punctuation!)</inlineHelpText>
    <label>Friendly URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>