force-app/main/default/objects/Content_BlogEntry__c/fields/Index_Related__c.field-meta.xml
<CustomField>
    <fullName>Index_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this blog related to the CenterPoint Energy Electric Price Index?</description>
    <inlineHelpText>Is this blog related to the CenterPoint Energy Electric Price Index?</inlineHelpText>
    <label>Index Related?</label>
    <type>Checkbox</type>
</CustomField>