force-app/main/default/objects/Content_BlogEntry__c/fields/Marketing_Editing__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Editing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Editing</label>
    <type>Checkbox</type>
</CustomField>