force-app/main/default/objects/Content_BlogEntry__c/fields/Publish_Date__c.field-meta.xml
<CustomField>
    <fullName>Publish_Date__c</fullName>
    <inlineHelpText>the blog will not appear until this date.  This date is also shown to the readers on the blog pages</inlineHelpText>
    <label>Publish Date</label>
    <type>DateTime</type>
</CustomField>