force-app/main/default/objects/Content_BlogEntry__c/fields/Published__c.field-meta.xml
<CustomField>
    <fullName>Published__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The article has completed the approval process and may appear in public</description>
    <inlineHelpText>The article has completed the approval process and may appear in public</inlineHelpText>
    <label>Published</label>
    <type>Checkbox</type>
</CustomField>