force-app/main/default/objects/Content_BlogEntry__c/fields/run_copy_trigger__c.field-meta.xml
<CustomField>
    <fullName>run_copy_trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>run copy trigger</label>
    <type>Checkbox</type>
</CustomField>