force-app/main/default/objects/Content_BlogEntry__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>The customer-facing title for this blog entry</description>
    <inlineHelpText>The customer-facing title for this blog entry</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>