force-app/main/default/objects/Content_BlogEntry__c/fields/TopScript__c.field-meta.xml
<CustomField>
    <fullName>TopScript__c</fullName>
    <description>For youTube embeds, please use 640x360.  ex: &lt;iframe width=&quot;640&quot; height=&quot;360&quot; src=&quot;http://www.youtube.com/embed/vmQyEoNep2g&quot; frameborder=&quot;0&quot; allowfullscreen&gt;&lt;/iframe&gt;</description>
    <inlineHelpText>For youTube embeds, please use 640x360.  ex: &lt;iframe width=&quot;640&quot; height=&quot;360&quot; src=&quot;http://www.youtube.com/embed/vmQyEoNep2g&quot; frameborder=&quot;0&quot; allowfullscreen&gt;&lt;/iframe&gt;</inlineHelpText>
    <label>TopScript</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>