force-app/main/default/objects/Content_BlogEntry__c/validationRules/Friendly_URL_Published_Blog.validationRule-meta.xml
<ValidationRule>
    <fullName>Friendly_URL_Published_Blog</fullName>
    <active>true</active>
    <description>Prevents blogs that have already published from having their friendly URL changed</description>
    <errorConditionFormula>AND(ISCHANGED(Friendly_URL__c), PRIORVALUE(Published__c) = TRUE)</errorConditionFormula>
    <errorDisplayField>Friendly_URL__c</errorDisplayField>
    <errorMessage>Blog01: Published blogs cannot have their friendly URL changed</errorMessage>
</ValidationRule>