force-app/main/default/objects/Content_BlogEntry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Author__c</columns>
    <columns>Title__c</columns>
    <columns>Publish_Date__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Published__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>