force-app/main/default/objects/Content_BlogEntry__c/listViews/CorpComm_Editing.listView-meta.xml
<ListView>
    <fullName>CorpComm_Editing</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Author__c</columns>
    <columns>Deck__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CorpComm_Editing__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Legal_Editing__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Final_Review__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>CorpComm Editing</label>
</ListView>