force-app/main/default/objects/Content_BlogEntry__c/listViews/Final_Review.listView-meta.xml
<ListView>
    <fullName>Final_Review</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CorpComm_Editing__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Legal_Editing__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Final_Review__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Final Review</label>
</ListView>