force-app/main/default/objects/Content_BlogEntry__c/listViews/FinalReview_Content_BlogEntry.listView-meta.xml
<ListView>
    <fullName>FinalReview_Content_BlogEntry</fullName>
    <filterScope>Queue</filterScope>
    <label>Final Review</label>
    <queue>FinalReview</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>