force-app/main/default/objects/Content_BlogEntry__c/listViews/Friendly_URL.listView-meta.xml
<ListView>
    <fullName>Friendly_URL</fullName>
    <columns>NAME</columns>
    <columns>Publish_Date__c</columns>
    <columns>Title__c</columns>
    <columns>Friendly_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>Friendly URL</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>