force-app/main/default/objects/Content_BlogEntry__c/listViews/Index.listView-meta.xml
<ListView>
    <fullName>Index</fullName>
    <columns>NAME</columns>
    <columns>Published__c</columns>
    <columns>Title__c</columns>
    <columns>Deck__c</columns>
    <columns>Author__c</columns>
    <columns>Publish_Date__c</columns>
    <columns>Above_the_Fold__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Index_Related__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Electric Price Index</label>
</ListView>