force-app/main/default/objects/Content_BlogEntry__c/listViews/LegalReview_Content_BlogEntry.listView-meta.xml
<ListView>
    <fullName>LegalReview_Content_BlogEntry</fullName>
    <filterScope>Queue</filterScope>
    <label>Legal Review</label>
    <queue>LegalReview</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>