force-app/main/default/objects/Content_BlogEntry__c/listViews/Published.listView-meta.xml
<ListView>
    <fullName>Published</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Author__c</columns>
    <columns>Publish_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Published__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Published</label>
</ListView>